# eyeoveryou

./: .flaskenv  .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
app/: __init__.py  routes.py
app/templates/: about.html  base.html  index.html  ip_info.html  weather.html
app/widgets/: ip_info_client.py  metaweather.py
docs/: conf.py  index.rst  make.bat
eyeoveryou/: eyeoveryou.py
tests/: __init__.py
