[metadata]
name = eyeoveryou
author = Kathryn Inez
author-email = kathryn@futilitymethod.com
long_description = file: README.md
url = https://github.com/futilityMethod/eyeoveryou
requires-python = >=3.8
classifiers =
    Development Status :: 0
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python